<resources>
    <string name="app_name">Movie Database</string>

    <string name="loading">Loading...</string>
    <string name="loading_data">Loading data...</string>
    <string name="loadingandwait">Loading... Please wait</string>

    <string name="no_internet_connection_title">No Internet Connection</string>
    <string name="no_internet_connection_message">It looks like your internet connection is off. \n Please turn it on and try again</string>

    <string name="menu_genres">Genres</string>

    <string name="menu_sorting">Sorting</string>
    <string name="menu_sorting_popularity_descending">Popular Descending</string>
    <string name="menu_sorting_popularity_ascending">Popular Ascending</string>
    <string name="menu_sorting_rating_descending">Rating Descending</string>
    <string name="menu_sorting_rating_ascending">Rating Ascending</string>
    <string name="menu_sorting_release_descending">Release Descending</string>
    <string name="menu_sorting_release_ascending">Release Ascending</string>

    <string name="themoviedb_api_key">307e3468362ad748555a3310e6b40c5e</string>
    <string name="query_api_key">api_key</string>
    <string name="themoviedb_api_version">https://api.themoviedb.org/3/</string>
    <string name="themoviedb_api_genres">genre/movie/list</string>

</resources>
